--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -55,6 +55,12 @@
                             <li><a asp-area="" asp-controller="Equipments" asp-action="Index">Equipamentos</a></li>
                         </ul>
                     </li>
+                    <li class="Filtros">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filtros <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Equipments" asp-action="EquipmentsUnderWarranty">Equipamentos na garantia</a></li>                            
+                        </ul>
+                    </li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contato</a></li>
 
