--- a/Inventory/Views/Employees/Details.cshtml
+++ b/Inventory/Views/Employees/Details.cshtml
@@ -1,78 +1,86 @@
 ﻿@model Inventory.Models.Employee
 
 @{
-    ViewData["Title"] = "Detalhe do Colaborador";
+    ViewData["Title"] = "Visualizando Colaborador";
 }
 
-    <h2>@ViewData["Title"]</h2>
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li><a asp-area="" asp-controller="Employees" asp-action="Index">Colaboradores</a></li>
+    <li class="active">Visualizar</li>
+</ol>
 
-    <div>
-        <!--<h4>Employee</h4>-->
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Company.Name)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Company.Name)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.Enrollment)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Enrollment)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.Name)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Name)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.ExternEmail)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.ExternEmail)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.RG)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.RG)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.CPF)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.CPF)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.Active)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Active)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.Registration)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Registration)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.LastUpdate)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.LastUpdate)
-            </dd>
-        </dl>
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> @ViewData["Title"] </div>
+    <div class="panel-body">
+
+        <div>
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Company.Name)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Company.Name)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Enrollment)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Enrollment)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.ExternEmail)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.ExternEmail)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.RG)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.RG)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.CPF)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.CPF)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Active)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Active)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Registration)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Registration)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.LastUpdate)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.LastUpdate)
+                </dd>
+            </dl>
+        </div>
+        <div>
+            <a asp-action="Index" class="btn btn-info"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Voltar</a> |
+            <a asp-action="Edit" asp-route-id="@Model.EmployeeId" class="btn btn-warning"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editar</a>
+        </div>
     </div>
-<div>
-    <a asp-action="Index" class="btn btn-default">Voltar</a> |
-    <a asp-action="Edit" asp-route-id="@Model.EmployeeId" class="btn btn-warning">Editar</a>
 </div>
