--- a/Inventory/Views/Employees/Edit.cshtml
+++ b/Inventory/Views/Employees/Edit.cshtml
@@ -4,72 +4,82 @@
     ViewData["Title"] = "Editar Colaborador";
 }
 
-<h2>@ViewData["Title"]</h2>
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li><a asp-area="" asp-controller="Employees" asp-action="Index">Colaboradores</a></li>
+    <li class="active">Editar</li>
+</ol>
 
-<!--<h4>Colaborador</h4>-->
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Employee.EmployeeId" />
-            <div class="form-group">
-                <label asp-for="Employee.CompanyId" class="control-label"></label>
-                <select asp-for="Employee.CompanyId" asp-items="@(new SelectList(Model.Companies,"CompanyId","Name"))" class="form-control"></select>
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> @ViewData["Title"]</div>
+    <div class="panel-body">
+
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Employee.EmployeeId" />
+                    <div class="form-group">
+                        <label asp-for="Employee.CompanyId" class="control-label"></label>
+                        <select asp-for="Employee.CompanyId" asp-items="@(new SelectList(Model.Companies,"CompanyId","Name"))" class="form-control"></select>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.Enrollment" class="control-label"></label>
+                        <input asp-for="Employee.Enrollment" class="form-control" />
+                        <span asp-validation-for="Employee.Enrollment" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.Name" class="control-label"></label>
+                        <input asp-for="Employee.Name" class="form-control" />
+                        <span asp-validation-for="Employee.Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.Email" class="control-label"></label>
+                        <input asp-for="Employee.Email" class="form-control" />
+                        <span asp-validation-for="Employee.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.ExternEmail" class="control-label"></label>
+                        <input asp-for="Employee.ExternEmail" class="form-control" />
+                        <span asp-validation-for="Employee.ExternEmail" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.RG" class="control-label"></label>
+                        <input asp-for="Employee.RG" class="form-control" />
+                        <span asp-validation-for="Employee.RG" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.CPF" class="control-label"></label>
+                        <input asp-for="Employee.CPF" class="form-control" />
+                        <span asp-validation-for="Employee.CPF" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input asp-for="Employee.Active" /> @Html.DisplayNameFor(model => model.Employee.Active)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.Registration" class="control-label"></label>
+                        <input asp-for="Employee.Registration" class="form-control" readonly />
+                        <span asp-validation-for="Employee.Registration" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Employee.LastUpdate" class="control-label"></label>
+                        <input asp-for="Employee.LastUpdate" class="form-control" readonly />
+                        <span asp-validation-for="Employee.LastUpdate" class="text-danger"></span>
+                    </div>
+                    <hr />
+                    <div class="form-group">
+                        <a asp-action="Index" class="btn btn-info"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Voltar</a> |
+                        <button type="submit" class="btn btn-success">
+                            <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Salvar
+                        </button>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Employee.Enrollment" class="control-label"></label>
-                <input asp-for="Employee.Enrollment" class="form-control" />
-                <span asp-validation-for="Employee.Enrollment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.Name" class="control-label"></label>
-                <input asp-for="Employee.Name" class="form-control" />
-                <span asp-validation-for="Employee.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.Email" class="control-label"></label>
-                <input asp-for="Employee.Email" class="form-control" />
-                <span asp-validation-for="Employee.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.ExternEmail" class="control-label"></label>
-                <input asp-for="Employee.ExternEmail" class="form-control" />
-                <span asp-validation-for="Employee.ExternEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.RG" class="control-label"></label>
-                <input asp-for="Employee.RG" class="form-control" />
-                <span asp-validation-for="Employee.RG" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.CPF" class="control-label"></label>
-                <input asp-for="Employee.CPF" class="form-control" />
-                <span asp-validation-for="Employee.CPF" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="Employee.Active" /> @Html.DisplayNameFor(model => model.Employee.Active)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.Registration" class="control-label"></label>
-                <input asp-for="Employee.Registration" class="form-control" readonly />
-                <span asp-validation-for="Employee.Registration" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Employee.LastUpdate" class="control-label"></label>
-                <input asp-for="Employee.LastUpdate" class="form-control" readonly />
-                <span asp-validation-for="Employee.LastUpdate" class="text-danger"></span>
-            </div>
-            <hr />
-            <div class="form-group">
-                <a asp-action="Index" class="btn btn-default">Voltar</a> |
-                <input type="submit" value="Salvar" class="btn btn-warning" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
