--- a/Inventory/Views/Employees/Index.cshtml
+++ b/Inventory/Views/Employees/Index.cshtml
@@ -4,82 +4,85 @@
     ViewData["Title"] = "Colaboradores";
 }
 
-    <h2>@ViewData["Title"]</h2>
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li class="active">Colaboradores</li>
+</ol>
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> @ViewData["Title"] <span class="badge">@Model.Count().ToString()</span></div>
+    <div class="panel-body">
+        <p><a asp-action="Create" class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Inserir</a></p>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create" class="btn btn-default">Novo Colaborador</a>
-</p>
-<table class="table table-striped table-hover">
+<table id="tabela" class="table table-striped table-hover" style="width:100%">
     <thead>
         <tr class="success">
-            <th>
-                @Html.DisplayNameFor(model => model.Company.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Enrollment)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ExternEmail)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RG)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CPF)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastUpdate)
-            </th>
+            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Email)</th>
+            <th>@Html.DisplayNameFor(model => model.ExternEmail)</th>
+            <th>@Html.DisplayNameFor(model => model.RG)</th>
+            <th>@Html.DisplayNameFor(model => model.CPF)</th>
+            <th>@Html.DisplayNameFor(model => model.Active)</th>
+            <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
             <th>Remover</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Company.Name)
-                @*@Html.ActionLink(item.Company.Name, "Details", "Employees", new { id = item.EmployeeId }, null)*@
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Enrollment)
-                @*@Html.ActionLink(item.Enrollment, "Details", "Employees", new { id = item.EmployeeId }, null)*@
-            </td>
-            <td>
-                @*@Html.DisplayFor(modelItem => item.Name)*@
-                @Html.ActionLink(item.Name, "Details", "Employees", new { id = item.EmployeeId }, null)                
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExternEmail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RG)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CPF)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastUpdate)
-            </td>            
-            <td>
-                <a asp-action="Delete" asp-route-id="@item.EmployeeId"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Company.Name)
+                    @*@Html.ActionLink(item.Company.Name, "Details", "Employees", new { id = item.EmployeeId }, null)*@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Enrollment)
+                    @*@Html.ActionLink(item.Enrollment, "Details", "Employees", new { id = item.EmployeeId }, null)*@
+                </td>
+                <td>
+                    @*@Html.DisplayFor(modelItem => item.Name)*@
+                    @Html.ActionLink(item.Name, "Details", "Employees", new { id = item.EmployeeId }, null)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ExternEmail)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RG)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CPF)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Active)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastUpdate)
+                </td>
+                <td>
+                    <a asp-action="Delete" asp-route-id="@item.EmployeeId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a>
+                </td>
 
-        </tr>
-}
+            </tr>
+        }
     </tbody>
+    <tfoot>
+        <tr class="success">
+            <th>@Html.DisplayNameFor(model => model.Company.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Enrollment)</th>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Email)</th>
+            <th>@Html.DisplayNameFor(model => model.ExternEmail)</th>
+            <th>@Html.DisplayNameFor(model => model.RG)</th>
+            <th>@Html.DisplayNameFor(model => model.CPF)</th>
+            <th>@Html.DisplayNameFor(model => model.Active)</th>
+            <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
+            <th>Remover</th>
+        </tr>
+    </tfoot>
 </table>
