--- a/Inventory/Views/Equipments/EquipmentsUnderWarranty.cshtml
+++ b/Inventory/Views/Equipments/EquipmentsUnderWarranty.cshtml
@@ -4,44 +4,36 @@
     ViewData["Title"] = "Equipamentos na garantia";
 }
 
-<h2>@ViewData["Title"]</h2>
+    <ol class="breadcrumb">
+        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+        <li><a asp-area="" asp-controller="Equipments" asp-action="Index">Equipamentos</a></li>
+        <li class="active">Na garantia</li>
+    </ol>
 
-<table class="table table-striped table-hover">
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> @ViewData["Title"] <span class="badge">@Model.Count().ToString()</span></div>
+    <div class="panel-body">
+        <p>
+            <a asp-action="Index" class="col-md-3 btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Voltar</a>
+            <a asp-action="EquipmentsUnderWarranty" class="col-md-3 btn btn-success"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Na garantia</a>
+        </p>
+    </div>
+</div>
+
+<table id="tabela" class="table table-striped table-hover" style="width:100%">
     <thead>
         <tr class="success">
-            <th>
-                @Html.DisplayNameFor(model => model.Employee.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Equity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OldEquity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Hostname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Manufacturer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Model)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ServiceTag)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Warranty)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Maintenance)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastUpdate)
-            </th>
+            <th>@Html.DisplayNameFor(model => model.Employee.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Equity)</th>
+            <th>@Html.DisplayNameFor(model => model.OldEquity)</th>
+            <th>@Html.DisplayNameFor(model => model.Hostname)</th>
+            <th>@Html.DisplayNameFor(model => model.Manufacturer)</th>
+            <th>@Html.DisplayNameFor(model => model.Model)</th>
+            <th>@Html.DisplayNameFor(model => model.ServiceTag)</th>
+            <th>@Html.DisplayNameFor(model => model.Warranty)</th>
+            <th>@Html.DisplayNameFor(model => model.Maintenance)</th>
+            <th>@Html.DisplayNameFor(model => model.Active)</th>
+            <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
             <th>Remover</th>
         </tr>
     </thead>
@@ -89,4 +81,20 @@
             </tr>
         }
     </tbody>
+    <tfoot>
+        <tr class="success">
+            <th>@Html.DisplayNameFor(model => model.Employee.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Equity)</th>
+            <th>@Html.DisplayNameFor(model => model.OldEquity)</th>
+            <th>@Html.DisplayNameFor(model => model.Hostname)</th>
+            <th>@Html.DisplayNameFor(model => model.Manufacturer)</th>
+            <th>@Html.DisplayNameFor(model => model.Model)</th>
+            <th>@Html.DisplayNameFor(model => model.ServiceTag)</th>
+            <th>@Html.DisplayNameFor(model => model.Warranty)</th>
+            <th>@Html.DisplayNameFor(model => model.Maintenance)</th>
+            <th>@Html.DisplayNameFor(model => model.Active)</th>
+            <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
+            <th>Remover</th>
+        </tr>
+    </tfoot>
 </table>
