--- a/Inventory/Views/Equipments/Index.cshtml
+++ b/Inventory/Views/Equipments/Index.cshtml
@@ -3,49 +3,35 @@
 @{
     ViewData["Title"] = "Equipamentos";
 }
+<ol class="breadcrumb">
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+    <li class="active">Equipamentos</li>
+</ol>
 
-<h2>@ViewData["Title"]</h2>
+<div class="panel panel-default">
+    <div class="panel-heading"><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> @ViewData["Title"] <span class="badge">@Model.Count().ToString()</span></div>
+    <div class="panel-body">
+        <p>
+            <a asp-action="Create" class="col-md-3 btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Inserir</a>            
+            <a asp-action="EquipmentsUnderWarranty" class="col-md-3 btn btn-default"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Na garantia</a>
+        </p>
+    </div>
+</div>
 
-<p>
-    <a asp-action="Create" class="btn btn-default">Novo Equipamento</a> |
-    <a asp-action="EquipmentsUnderWarranty" class="btn btn-default">Na garantia</a>
-</p>
-<table class="table table-striped table-hover">
+<table id="tabela" class="table table-striped table-hover" style="width:100%">
     <thead>
         <tr class="success">
-            <th>
-                @Html.DisplayNameFor(model => model.Employee.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Equity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OldEquity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Hostname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Manufacturer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Model)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ServiceTag)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Warranty)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Maintenance)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastUpdate)
-            </th>
+            <th>@Html.DisplayNameFor(model => model.Employee.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Equity)</th>
+            <th>@Html.DisplayNameFor(model => model.OldEquity)</th>
+            <th>@Html.DisplayNameFor(model => model.Hostname)</th>
+            <th>@Html.DisplayNameFor(model => model.Manufacturer)</th>
+            <th>@Html.DisplayNameFor(model => model.Model)</th>
+            <th>@Html.DisplayNameFor(model => model.ServiceTag)</th>
+            <th>@Html.DisplayNameFor(model => model.Warranty)</th>
+            <th>@Html.DisplayNameFor(model => model.Maintenance)</th>
+            <th>@Html.DisplayNameFor(model => model.Active)</th>
+            <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
             <th>Remover</th>
         </tr>
     </thead>
@@ -88,9 +74,25 @@
                     @Html.DisplayFor(modelItem => item.LastUpdate)
                 </td>
                 <td>
-                    <a asp-action="Delete" asp-route-id="@item.EquipmentId"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                    <a asp-action="Delete" asp-route-id="@item.EquipmentId"><span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span></a>
                 </td>
             </tr>
         }
     </tbody>
+    <tfoot>
+        <tr class="success">
+            <th>@Html.DisplayNameFor(model => model.Employee.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Equity)</th>
+            <th>@Html.DisplayNameFor(model => model.OldEquity)</th>
+            <th>@Html.DisplayNameFor(model => model.Hostname)</th>
+            <th>@Html.DisplayNameFor(model => model.Manufacturer)</th>
+            <th>@Html.DisplayNameFor(model => model.Model)</th>
+            <th>@Html.DisplayNameFor(model => model.ServiceTag)</th>
+            <th>@Html.DisplayNameFor(model => model.Warranty)</th>
+            <th>@Html.DisplayNameFor(model => model.Maintenance)</th>
+            <th>@Html.DisplayNameFor(model => model.Active)</th>
+            <th>@Html.DisplayNameFor(model => model.LastUpdate)</th>
+            <th>Remover</th>
+        </tr>
+    </tfoot>
 </table>
